--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.daimajia.slider:library:1.1.5'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
