--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,15 +28,24 @@
         <activity
             android:name=".User"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".ItemDetails"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name=".ImageViewer"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name=".BoutiqueDetails"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name=".OwnerAndDesigner"
-            android:configChanges="orientation|screenSize"/>
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ItemDetails"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".ImageViewer"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".BoutiqueDetails"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".OwnerAndDesigner"
+            android:configChanges="orientation|screenSize" />
+
+        <service
+            android:name=".Notification"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
