--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.daimajia.slider:library:1.1.5'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:gridlayout-v7:23.4.0'
 }
