--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
 }
