--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,11 +47,14 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".GridOfProducts"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name=".OrderStatus"
+        <activity
+            android:name=".GridOfProducts"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".OrderStatus"
             android:configChanges="orientation|screenSize"
-            android:label="My Orders "/>
+            android:label="My Orders " />
+        <activity android:name=".OrderProductList"></activity>
     </application>
 
 </manifest>
