--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,11 @@
             android:name=".OrderStatus"
             android:configChanges="orientation|screenSize"
             android:label="My Orders " />
-        <activity android:name=".OrderProductList"></activity>
+        <activity android:name=".OrderProductList"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ProductReviews"
+            android:windowSoftInputMode="stateHidden"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
