starting of chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,11 +54,14 @@
             android:name=".OrderStatus"
             android:configChanges="orientation|screenSize"
             android:label="My Orders " />
-        <activity android:name=".OrderProductList"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name=".ProductReviews"
-            android:windowSoftInputMode="stateHidden"
-            android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name=".OrderProductList"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".ProductReviews"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".Chat"></activity>
     </application>
 
 </manifest>
