--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:configChanges="orientation|screenSize" />
 
         <service
-            android:name=".Notification"
+            android:name=".Services"
             android:enabled="true"
             android:exported="true" />
 
