--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'com.wang.avi:library:1.0.5'
 }
