--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
     compile 'com.wang.avi:library:1.0.5'
+    compile 'ch.acra:acra:4.9.0'
 }
